fix spacingon header and add emoji

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,7 +51,7 @@ section {
   width: 50vw;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 15vh;
+  margin-top: 5vh;
 
   a,
   li > a {
@@ -82,19 +82,25 @@ section {
 }
 
 .theme-toggle {
-  // display: block;
   max-width: 100px;
   min-width: 60px;
-  // position: absolute;
-  // right: 2vw;
-  // top: 0;
+  top: 0;
   margin: 0;
   z-index: 10000;
 }
 
 p.theme-text {
-  font-size: 25px !important;
+  font-size: 55px !important;
   margin: 0;
+}
+
+.top-left {
+  max-width: 100px;
+  min-width: 60px;
+  top: 0;
+  margin: 0;
+  z-index: 10000;
+
 }
 
 p,
